--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
 
     <!-- styles -->
-	<link rel="stylesheet" href="./stylesheets/style.css" />
+	<link rel="stylesheet" href="./stylesheets/main.css" />
 	
     <!-- script -->
     <script src="./javascripts/mortgage.js"></script>	
