--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="./stylesheets/main.css" />
 	
     <!-- script -->
-    <script src="./javascripts/mortgage.js"></script>	
+    <script src="./javascripts/rate.js"></script>	
 </head>
 
 <body>
