--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -18,25 +18,25 @@
 	<link rel="stylesheet" href="./stylesheets/main.css" />
 	
     <!-- script -->
-    <script src="./javascripts/rate.js"></script>	
+    <script src="./javascripts/getRate.js"></script>
 </head>
 
 <body>
     <header>
-        <h2>Mortgage Calculator</h2>
+        <h2>Postal Rate Calculator</h2>
 	</header>
 
       
     <div class="clearfix">
         <section>
 			<h1>
-				This free mortgage calculator lets you estimate your monthly house payment, 
-				including annual percentage rate, loan term and loan amount.
+				This free postal rate calculator lets you estimate your cost to mail a letter or package  
+				through USPS.
 			</h1>
 			<div class="row">
 				<div class="col-4 col-s-3 menu">
 					<div class="button-link-container">
-						<a href="#"><div class="button-link link-current">Mortgage Calculator</div></a><br />
+						<a href="#"><div class="button-link link-current">Postal Rate Calculator</div></a><br />
 						
 					</div>
 				</div>
@@ -44,27 +44,21 @@
                 <div class="col-4 col-s-9">
                     
 					<form id="form"  method="GET"> 
-						Annual Percentage Rate<br>
-						<input id="apr" type="text" name="apr" onchange="calculatePayment();" oninput="aprCheck('reqApr', 'aprError');">
-						<span id='reqApr' style='visibility:hidden'>Fill out this field</span>
+						Enter your parcel type<br>
+						
+						<input id="type" type="text" name="parcel_type" onchange="calculatePayment();">
+						<span id='reqparcel_type' style='visibility:hidden'>Fill out this field</span>
 						<br>
-						<span id='aprError' style='visibility:hidden'> Value must be between 0 and 25.00%</span>
-						<br>
-						Loan Term (in years)<br>
-						<input id="term" type="text" name="term" onchange="calculatePayment();" oninput="termCheck('reqTerm', 'termError');">
-						<span id='reqTerm' style='visibility:hidden'>Fill out this field</span>
-						<br>
-						<span id='termError' style='visibility:hidden'>Value must be greater then 0 and less or equal to 40</span>
-						<br>
-						Loan Amount (in dollars)<br>
-						<input id="amount" type="text" name="amount" onchange="calculatePayment();" oninput="amountCheck('reqAmount', 'amountError');">
-						<span id='reqAmount' style='visibility:hidden'>Fill out this field</span>
+						
+						Enter your parcel weight<br>
+						<input id="weight" type="number" name="weight" onchange="calculatePayment();">
+						<span id='reqWeight' style='visibility:hidden'>Fill out this field</span>
 						<br>
 						<span id='amountError' style='visibility:hidden'>Value must be greater then 0</span>
 						<br><br>
-						<input id="clear" type="reset" name="clear" value="Clear" onclick="clearError();">
+						<input id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();">
 						<br><br>
-						<input id="calculate" type="submit" name="calculate" value="Calculate">			
+						<input id="calculate" type="submit" name="calculate" value="Calculate" onclick="getRate();">			
 					</form>
 					<br /><br />
 					
