--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -44,13 +44,13 @@
                 <div class="col-4 col-s-9">
                     
 					<form id="form"  method="GET"> 
-						Enter your parcel type<br>
-						
+                  Enter your parcel type:
+                  <br />
 						<input id="type" type="text" name="parcel_type" onchange="calculatePayment();">
 						<span id='reqparcel_type' style='visibility:hidden'>Fill out this field</span>
-						<br>
-						<br /><br />
-						Enter your parcel weight<br>
+						<br />
+						<br />
+						Enter your parcel weight <br />
 						<input id="weight" type="number" name="weight" onchange="calculatePayment();">
 						<span id='reqWeight' style='visibility:hidden'>Fill out this field</span>
 						<br>
@@ -71,7 +71,7 @@
 		<br /><br />
 		Address. xxx XXX Portland, OR xxxxx<br />
 		Tel. 123-456-7890<br />      
-		Email. dneves@gmail.com<br /><br />
+		Email. nev05002@byui.edu<br /><br />
 		© 2020 by Neves.
 		<br /><br />
 		<a href="#">Contact Us!</a>
