--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -3,9 +3,9 @@
 
 <head>
     <!-- Search Engine Optimization -->
-	<title>Mortgage Calculator</title>
-	<meta name="description" content="Mortgage Calculator">
-	<meta name="keywords" content="Mortgage, Calculator">
+	<title>Postal Rate Calculator</title>
+	<meta name="description" content="Postal Rate Calculator">
+	<meta name="keywords" content="Postal Rate, Calculator">
 	<meta name="author" content="Davi Neves">
 
 	<!-- responsive -->
@@ -52,9 +52,6 @@
 						<br />
 						Enter your parcel's weight: <br />
 						<input id="weight" type="number" name="weight" onchange="calculatePayment();">
-						<span id='reqWeight' style='visibility:hidden'>Fill out this field</span>
-						<br>
-						<span id='amountError' style='visibility:hidden'>Value must be greater then 0</span>
 						<br><br>
 						<input id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();">
 						<br><br>
