--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -51,9 +51,9 @@
 						Enter your parcel's weight: <br />
 						<input id="weight" type="number" name="weight">
 						<br><br>
-						<button id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();"></button>
+						<button id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();">Clear</button>
 						<br><br>
-						<button id="calculate" type="submit" name="calculate" value="Calculate" onclick="getRate();"></button>	
+						<button id="calculate" type="submit" name="calculate" value="Calculate" onclick="getRate();">Calculate</button>	
 					</form>
 					<br /><br />
                <div id="divResults">
