--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,7 +38,7 @@ p {
   
   
   
-  #clear, #calculate, #files {
+  button #clear, #calculate, #files {
     color: white;
     background-color: #1A2B6D;
     font: normal normal bold 16px spinnaker,sans-serif ;
