--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -18,7 +18,8 @@
 	<link rel="stylesheet" href="./stylesheets/main.css" />
 	
     <!-- script -->
-    <script src="./javascripts/getRate.js"></script>
+	 <script src="./javascripts/getRate.js"></script>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
