--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -58,8 +58,8 @@
 					
 					<br /><br />
                <div id="divResults">
-                  <h2>Your total cost is:</h2>
-                  <h3 id="cost"></h3>
+						<h2>Your total cost is:</h2>
+						<div style="display: inline-block;" id="cost"></div>
                </div>
                
 				</div>
