--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -57,7 +57,7 @@
 						<button id="calculate" type="submit" name="calculate" value="Calculate" onclick="getRate();">Calculate</button>	
 					
 					<br /><br />
-               <div id="divResults">
+               <div id="divResults" style="display: inline;">
 						<h2>Your total cost is:</h2>
 						<div style="display: inline-block;" id="cost"></div>
                </div>
