--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -43,10 +43,17 @@
 				</div>
 
                 <div class="col-4 col-s-9">
-                    
+						<label for="cars">Enter your parcel's type: <br /></label>
+
+						<select name="parcels" id="parcel_type">
+						  <option value="stamped">Stamped</option>
+						  <option value="metered">Metered</option>
+						  <option value="flats">Flats</option>
+						  <option value="first-class">First-class</option>
+						</select> 
 					 
-                  Enter your parcel's type: <br />
-						<input id="type" type="text" name="parcel_type">
+                  
+						
 						<br />
 						<br />
 						Enter your parcel's weight: <br />
