--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -39,7 +39,6 @@
 				</div>
                 <div class="col-4 col-s-9">
 						<label for="cars" style="margin-bottom: 15px;">Enter your parcel's type:</label>
-						<br />
 						<select id="type" name="parcels" id="parcel_type" style="font-size: inherit;">
 						  <option value="stamped">Stamped</option>
 						  <option value="metered">Metered</option>
@@ -48,8 +47,7 @@
 						</select> 
 						<br />
 						<br />
-						<p style="margin-bottom: 15px;">Enter your parcel's weight:</p> 
-						<br />
+						<p>Enter your parcel's weight:</p>
 						<input id="weight" type="number" name="weight" style="font-size: inherit;">
 						<br><br>
 						<a href="#"><button id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();">Clear</button></a>
