--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -50,7 +50,7 @@
 						<span>Enter your parcel's weight:<br /></span>
 						<input id="weight" type="number" name="weight" style="font-size: inherit;">
 						<br><br>
-						<a href="#"><button id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();">Clear</button></a>
+						<button id="clear" type="reset" name="clear" value="Clear" onclick="clearForm();">Clear</button>
 						<br><br>
 						<button id="calculate" type="submit" name="calculate" value="Calculate" onclick="getRate();">Calculate</button>	
 					<br />
