--- a/views/postal.ejs
+++ b/views/postal.ejs
@@ -38,7 +38,7 @@
 					</div>
 				</div>
                 <div class="col-4 col-s-9">
-						<label for="cars">Enter your parcel's type:<br /></label>
+						<label for="cars">Choose your parcel's type:<br /></label>
 						<select id="type" name="parcels" id="parcel_type" style="font-size: inherit;">
 						  <option value="stamped">Stamped</option>
 						  <option value="metered">Metered</option>
